RESOLVED FIXED110439
[BlackBerry] Element::getAttributeItem() no longer returns a mutable attribute
https://bugs.webkit.org/show_bug.cgi?id=110439
Summary [BlackBerry] Element::getAttributeItem() no longer returns a mutable attribute
Alberto Garcia
Reported 2013-02-21 01:37:25 PST
This was changed in r142827
Attachments
Patch (1.49 KB, patch)
2013-02-21 01:39 PST, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-02-21 01:39:11 PST
WebKit Review Bot
Comment 2 2013-02-21 05:12:08 PST
Comment on attachment 189475 [details] Patch Clearing flags on attachment: 189475 Committed r143590: <http://trac.webkit.org/changeset/143590>
WebKit Review Bot
Comment 3 2013-02-21 05:12:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.