[BlackBerry] Element::getAttributeItem() no longer returns a mutable attribute https://bugs.webkit.org/show_bug.cgi?id=110439

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-02-21
Reviewed by Antonio Gomes.

This was changed in r142827.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):

Canonical link: https://commits.webkit.org/128741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143590 268f45cc-cd09-0410-ab3c-d52691b4dbfc